--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -3,10 +3,14 @@
 }
 
 #pop-window {
-    /* display: none; */
+    display: none;
     width: 100%;
     position: relative;
     background-color: transparent;
+}
+
+#pop-window .im-pop-window {
+    z-index: 1000;
 }
 
 #pop-window .container {
@@ -75,7 +79,7 @@
     flex-direction: row;
     margin: 0 auto 50px;
     margin: auto;
-    
+
 }
 
 
@@ -247,7 +251,7 @@
     right: 0;
     bottom: 0;
     color: #ffffff;
-    outline: #ffe282 1px  solid;
+    outline: #ffe282 1px solid;
     font-size: 18px;
     border: none;
     padding: 0;
@@ -340,8 +344,7 @@
     }
 }
 
-/* 彈跳視窗上半部swiper 左邊直的是主要 右邊是sub次要 */
-
+/* 彈跳視窗上半部swiper 左邊直的是主要(main) 右邊是次要(sub) */
 
 /* 上方swiper 樣式 */
 #pop-window .swiper-pop-top {
@@ -425,10 +428,10 @@
     /* position: absolute; */
     /* bottom: 10px;
     left: 100px; */
-  
+
 }
 
-.pop-sub-border-img  {
+.pop-sub-border-img {
     width: 400px;
     height: 437px;
     background-image: url('/img/shop-img-border.png');
@@ -498,6 +501,7 @@
     line-height: 2.75em;
     /* border-top: 2px solid #ffffff; */
 }
+
 .tab-content::after {
     content: '';
     width: 100%;
@@ -526,7 +530,7 @@
 .tab-switch:checked+.tab-label {
     background: #222222;
     color: #ffe282;
-    border-bottom:0;
+    border-bottom: 0;
     padding: 8px 16px;
     border-left: 1px solid #ffffff;
     border-top: 1px solid #ffffff;
@@ -765,9 +769,11 @@ a {
         flex-direction: column;
         flex-wrap: wrap;
     }
+
     .product-information-swiper {
         width: 100%;
     }
+
     .product-information-text {
         width: 100%;
         height: 600px;
@@ -780,5 +786,22 @@ a {
     .container {
         display: flex;
         flex-direction: column;
+    }
+}
+
+/* swiper main  RWD */
+
+@media (max-width:768px) {
+    #pop-window .product-information-swiper {
+        flex-wrap: wrap-reverse;
+    }
+
+    #pop-window .my-pop-swiper {
+        width: 100%;
+        height: 150px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        overflow: hidden;
     }
 }
