--- a/css/popwindow-test.css
+++ b/css/popwindow-test.css
@@ -7,6 +7,7 @@
     width: 100%;
     position: relative;
     background-color: transparent;
+    /* position: fixed; */
 }
 
 #pop-window .im-pop-window {
@@ -82,8 +83,6 @@
 
 }
 
-
-
 #pop-window .product-information-swiper {
     display: flex;
     margin: 0;
@@ -96,6 +95,7 @@
 #pop-window .product-information-text {
     width: 100%;
     position: relative;
+    margin-left: 20px;
 }
 
 #pop-window .content-text-title {
@@ -112,7 +112,7 @@
     background-color: #ffffff;
     position: absolute;
     top: 30px;
-    right: -10px;
+    right: 0px;
     z-index: 100;
 }
 
@@ -122,9 +122,10 @@
     color: #ffffff;
 }
 
+/* 取消寬度設定 RWD到1200px以下時 不會導致內容被吃掉 */
 #pop-window .content-text-sort {
     font-size: 14px;
-    width: 352px;
+    /* width: 352px; */
     margin-bottom: 30px;
     color: #ffffff;
 }
@@ -334,6 +335,9 @@
     #pop-window .pop-window-content {
         width: 1100px;
     }
+    #pop-window .product-information-content{
+        /* margin: 0 auto 50px; */
+    }
 }
 
 @media screen and (min-width:1300px) {
@@ -432,14 +436,21 @@
 }
 
 .pop-sub-border-img {
-    width: 400px;
-    height: 437px;
+    width: 100%;
+    height: 100%;
     background-image: url('/img/shop-img-border.png');
     background-size: contain;
-    margin-bottom: 20px;
+    position: relative;
+    background-color: #222222;
+    object-fit: contain;
+}
+
+.sub-img {
+    width: 420px;
+    height: 456px;
+    border: 10px solid transparent;
     position: absolute;
-    right: -10px;
-    top: 50px;
+    background-size: contain;
 }
 
 
@@ -780,7 +791,7 @@ a {
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
-        margin-bottom: 0 auto 65px;
+        margin: 0 auto 65px;
     }
 
     .container {
