--- a/css/banner.css
+++ b/css/banner.css
@@ -81,7 +81,7 @@
     bottom: 10%;
     left: 50%;
     padding: 10px 15px;
-    /* font-size: 0.9rem; */
+    font-size: 36px;
     transform: translateX(-50%);
     text-align: center;
     position: absolute;
