--- a/css/header.css
+++ b/css/header.css
@@ -1,18 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Microsoft JhengHei;
+header{
+  position: sticky;
+  top: 0;
+  z-index: 2000;
 }
 
-/* 背景設置 */
-html {
-  background-color: #0c1219;
-  font-weight: 400;
-  text-decoration: none;
-}
-
-nav {
+header nav {
   background-color: #0c1219;
   width: 100%;
   height: 76px;
@@ -32,7 +24,7 @@ header .nav-main {
 
 /* nav-logo樣式 */
 header .nav-logo {
-  margin: 13px 95px 0 10px;
+  margin: 13px 10px 0 10px;
 }
 
 header .nav-logo-btn {
@@ -117,13 +109,12 @@ header .menu-distribution,
 header .menu-classic,
 header .menu-media,
 header .menu-franchisee {
-  width: 100%;
   display: flex;
   flex-wrap: nowrap;
-  padding: 8px 0 10px 0;
-  /* margin-right: 21px; */
   border: 2px solid transparent;
   color: #eef2f7;
+  padding: 8px 10px 9px 10px;
+  margin: 18px 10px 18px 10px;
 }
 
 header .menu-about a,
@@ -220,10 +211,11 @@ header img.social-menu-icon-ig {
 }
 
 header .mine-menu-btn {
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 20px;
 }
 
 /* 下拉選單CSS */
@@ -282,6 +274,7 @@ header .dropdown-content-en {
   text-decoration: none;
   border: 1px solid white;
   list-style: none;
+  background-color: #0C1219;
 }
 
 header .dropdown-content-en {
@@ -353,6 +346,7 @@ header .jing-section {
 header .nav-ham {
   width: 100%;
   position: relative;
+  background-color: #000000;
 }
 
 header .container {
@@ -360,19 +354,19 @@ header .container {
   display: flex;
   top: 76px;
   width: 100%;
-  height: 50vh;
 }
 
 
 /* 秋 top 按鈕 */
 header .go-to-top-container {
   position: fixed;
-  right: 2%;
-  bottom: 40px;
+  right: 2.6%;
+  bottom: 36px;
   z-index: 5;
 }
 
 header .go-to-top-container .go-to-top {
+  display: none;
   width: 71px;
   height: 71px;
 }
@@ -381,27 +375,53 @@ header .go-to-top-container .go-to-top {
 
 header .shop-cart-container {
   position: fixed;
-  bottom: 50%;
-  right: 2%;
+  bottom: 45%;
+  right: 0.4%;
 }
 
 header .shop-cart-container .shop-cart {
   position: relative;
   right: 2%;
-  width: 60px;
-  height: 60px;
+  width: 30px;
+  height: 30px;
 }
 
 header .shop-cart-container .shop-cart-amount-area {
   position: absolute;
   bottom: 60%;
-  right: 40px;
+  right: 20px;
 }
 
 header .shop-cart-container .shop-cart-amount-area .shop-cart-amount {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   z-index: 100;
+}
+
+@media screen and (min-width:767px){
+  header .go-to-top-container .go-to-top {
+    display: block;
+  }
+
+  header .shop-cart-container {
+    bottom: 40%;
+  }
+
+  header .shop-cart-container .shop-cart{
+    width: 60px;
+    height: 60px;
+  }
+
+  header .shop-cart-container .shop-cart-amount-area {
+    position: absolute;
+    bottom: 60%;
+    right: 40px;
+  }
+
+  header .shop-cart-container .shop-cart-amount-area .shop-cart-amount {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 header .shop-cart-container .shop-cart-amount-area .shop-cart-number {
@@ -414,14 +434,6 @@ header .shop-cart-container .shop-cart-amount-area .shop-cart-number {
   z-index: 100;
 }
 
-/* lan swrip 效果 */
-header .swiper-slide {
-  display: flex;
-  flex-grow: 2;
-  width: 158px;
-  border: 1px solid #ffffff;
-}
-
 header .social-menu-icon {
   display: flex;
   justify-content: end;
@@ -432,6 +444,7 @@ header .main-menu-text-ch {
   display: flex;
   color: #eef2f7;
   text-decoration: none;
+  font-size: 14px;
 }
 
 header .main-menu-text-ch:hover {
@@ -442,6 +455,7 @@ header .main-menu-text-ch:hover {
 header .main-menu-text-en {
   color: #eef2f7;
   text-decoration: none;
+  font-size: 12px;
 }
 
 header .main-menu-text-en:hover {
@@ -450,17 +464,53 @@ header .main-menu-text-en:hover {
 }
 
 header .mine-menu {
+  padding: 10px 0 20px 0;
   width: 100%;
-  /* display: flex; */
+  height: calc(100vh - 76px );
   flex-direction: column;
-  /* flex-wrap: nowrap; */
   justify-content: start;
   align-items: center;
+  display: none;
 }
 
-header .swiper-container {
-  width: 158px;
-  background-color: #eef2f7;
+header .flex-mine-menu {
+  padding: 10px 0 20px 0;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  display: flex;
+}
+
+@media screen and (min-width:767px){
+  header .mine-menu{
+    height: unset;
+  }
+}
+
+header .swiper-language{
+  width: 160px;
+  height: 45px;
+  border: 0.8px solid white;
+  background-color: #000000;
+}
+
+header .show{
+  display: block;
+}
+
+header .header-slide-ch{
+  padding: 10px 0;
+  color: white;
+  text-align: center;
+  font-size: 14px;
+}
+
+header .header-slide-en{
+  padding: 12px 0;
+  color: white;
+  text-align: center;
+  font-size: 14px;
 }
 
 :any-link {
