--- a/css/popwindow-test.css
+++ b/css/popwindow-test.css
@@ -9,15 +9,19 @@ body {
 #pop-window {
     display: none;
     width: 100%;
-    /* position: relative; */
     background-color: transparent;
     position: absolute;
-    z-index: 10000;
+    z-index: 102;
     top:5%;
 }
 
-#pop-window .im-pop-window {
-    z-index: 1000;
+.window-overlay{
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 101;
+    background: rgba(0, 0, 0, 0.5);
 }
 
 #pop-window .container {
@@ -43,6 +47,14 @@ body {
     position: absolute;
     right: 25px;
     top: 10px;
+}
+
+#pop-window .pop-window-close button {
+    background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	outline: inherit;
 }
 
 #pop-window .pop-window-header {
