--- a/css/popwindow-backup.css
+++ b/css/popwindow-backup.css
@@ -1,28 +1,18 @@
 * {
     box-sizing: border-box;
 }
-
 body {
     position: relative;
 }
-
 #pop-window {
-    display: none;
-    /* width: 100%; */
+    /* display: none; */
+    width: 100%;
+    position: relative;
     background-color: transparent;
-    position: absolute;
-    z-index: 102;
-    top:5%;
-    /* transition: 0.3s ease-in-out; */
 }
 
-.window-overlay{
-    display: none;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 101;
-    background: rgba(0, 0, 0, 0.5);
+#pop-window .im-pop-window {
+    z-index: 100;
 }
 
 #pop-window .container {
@@ -48,14 +38,6 @@ body {
     position: absolute;
     right: 25px;
     top: 10px;
-}
-
-#pop-window .pop-window-close button {
-    background: none;
-	border: none;
-	padding: 0;
-	cursor: pointer;
-	outline: inherit;
 }
 
 #pop-window .pop-window-header {
@@ -311,12 +293,8 @@ body {
     text-decoration: none;
 }
 
-/* 視窗畫面小於576px */
-@media screen and (max-width:576px) {
-    #pop-window {
-        width: 100%;
-    }
-}
+
+
 
 @media screen and (min-width:576px) {
     #pop-window .container {
@@ -331,27 +309,17 @@ body {
     #pop-window .pop-window-content {
         width: 100%;
     }
-    #pop-window {
-        left: calc(50% - 270px);
-    }
 }
 
 @media screen and (min-width:768px) {
     #pop-window .container {
         max-width: 720px;
     }
-    #pop-window {
-        left: calc(50% - 360px);
-    }
 }
 
 @media screen and (min-width:992px) {
     #pop-window .container {
         max-width: 960px;
-    }
-
-    #pop-window {
-        left: calc(50% - 480px);
     }
 }
 
@@ -370,9 +338,6 @@ body {
     }
     #pop-window .product-information-content{
         /* margin: 0 auto 50px; */
-    }
-    #pop-window {
-        left: calc(50% - 565px);
     }
 }
 
@@ -475,6 +440,7 @@ body {
     height: 100%;
     background-image: url('/img/shop-img-border.png');
     background-size: contain;
+    background-repeat: no-repeat;
     position: relative;
     background-color: #222222;
     object-fit: contain;
@@ -488,10 +454,7 @@ body {
     background-size: contain;
 }
 
-
-
 /* tab-nav switch  */
-
 .tab-switch {
     display: none;
 }
@@ -836,7 +799,6 @@ a {
 }
 
 /* swiper main  RWD */
-
 @media (max-width:768px) {
     #pop-window .product-information-swiper {
         flex-wrap: wrap-reverse;
@@ -850,4 +812,9 @@ a {
         align-items: center;
         overflow: hidden;
     }
+
+    /* #pop-window .swiper-pop-top-slide {
+        width: 437px;
+        height: 400px;
+    } */
 }
