--- a/css/Franchisee-new-0920.css
+++ b/css/Franchisee-new-0920.css
@@ -1,54 +1,70 @@
-#authorization .background{
+#authorization .background {
     width: 100%;
+    min-height: 1479px;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url(/images/background_img/about_bg.png);
     z-index: -3;
 }
-#authorization .background-wave{
+
+#authorization .background-wave {
     width: 100%;
     height: 100%;
     position: absolute;
     background-repeat: no-repeat;
+    background-size: 100%;
     background-image: url(/images/background_img/section_header.webp);
     top: 0%;
     z-index: -2;
 }
-#authorization .background-tiger-logo img{
+
+#authorization .background-tiger-logo img {
     width: 42vw;
     position: absolute;
     top: 15%;
-    left: 50%;
-    filter:contrast(90%);
+    left: 55%;
+    filter: contrast(85%);
 }
-#authorization .container{
-    max-width: 1100px;
+
+#authorization .tiger-main-logo {
+    margin-top: 5%;
+}
+
+#authorization .container {
+    padding: 5%;
+    max-width: 65%;
     margin: auto;
 }
-#authorization .franchisee-logo{
-    padding: 50px 0;
+
+#authorization .franchisee-logo {
+    margin-bottom: 80px;
     display: flex;
 }
-#authorization .franchisee-logo img{
+
+#authorization .franchisee-logo img {
     width: 34px;
     margin-right: 10px;
 }
-#authorization .franchisee-logo-cn-en{
+
+#authorization .franchisee-logo-cn-en {
     display: flex;
     flex-direction: column;
 }
-#authorization .franchisee-logo-cn{
+
+#authorization .franchisee-logo-cn {
     color: white;
     font-size: 10px;
 }
-#authorization .franchisee-logo-en{
+
+#authorization .franchisee-logo-en {
     color: white;
     font-size: 12px;
     margin-bottom: 0;
     line-height: 20px;
 }
-#authorization .steps-title{
+
+#authorization .steps-title {
     width: 384px;
     height: 64px;
     border: 1px solid #f4dd97;
@@ -59,16 +75,19 @@
     margin-top: 39px;
     margin-bottom: 58px;
 }
-#authorization .steps-title span{
+
+#authorization .steps-title span {
     display: inline-block;
     margin: 0 0.5em;
     width: auto;
 }
-#authorization .steps img{
+
+#authorization .steps img {
     width: 50px;
 }
-#authorization .steps{
-    background-color: rgba(14, 25, 32 ,0.2);
+
+#authorization .steps {
+    background-color: rgba(14, 25, 32, 0.2);
     border: 1px dashed rgb(59, 60, 62);
     padding: 11.5px 41px 11.5px 13px;
     margin-bottom: 16px;
@@ -77,13 +96,15 @@
     justify-content: flex-start;
     align-items: center;
 }
-#authorization .steps-group{
+
+#authorization .steps-group {
     max-width: 635px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: flex-start;
 }
+
 #authorization .step1,
 #authorization .step2,
 #authorization .step3,
@@ -94,10 +115,11 @@
 #authorization .step8,
 #authorization .step9,
 #authorization .step10,
-#authorization .step11{
+#authorization .step11 {
     position: relative;
     margin-right: 20px;
 }
+
 #authorization .step1 span,
 #authorization .step2 span,
 #authorization .step3 span,
@@ -108,7 +130,7 @@
 #authorization .step8 span,
 #authorization .step9 span,
 #authorization .step10 span,
-#authorization .step11 span{
+#authorization .step11 span {
     color: #f4dd97;
     position: absolute;
     top: 50%;
@@ -116,8 +138,43 @@
     transform: translate(-50%, -50%);
     z-index: 1;
 }
-#authorization .steps-text{
+
+#authorization .steps-text {
     color: aliceblue;
     font-size: 18px;
     font-family: "\5FAE\8EDF\6B63\9ED1\9AD4";
+}
+
+@media (max-width:890px) {
+    #authorization .container {
+        min-width: 100%;
+        margin: unset;
+    }
+}
+@media (max-width:775px) {
+    #authorization .background-wave{
+        background-size: 250%;
+        background-position: top left;
+    }
+}
+@media (max-width:420px) {
+    #authorization .container {
+        padding: 0 10px;
+    }
+    #authorization .franchisee-logo{
+        
+    }
+    #authorization .tiger-main-logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #authorization .tiger-main-logo img {
+        width: 240px;
+        height: 64px;
+        margin: auto;
+    }
+    #authorization .steps-title {
+        width: 100%;
+    }
 }
