--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -263,7 +263,7 @@ body {
     align-items: flex-end;
 }
 
-.add-for-ask-button {
+#pop-window .add-for-ask-button {
     width: 114px;
     height: 48px;
     position: absolute;
@@ -277,7 +277,7 @@ body {
     background-color: transparent;
 }
 
-.add-for-ask-button:hover {
+#pop-window .add-for-ask-button:hover {
     background-color: #ffe282;
     color: #000000;
     transition: 0.5s ease-in-out;
@@ -463,13 +463,13 @@ body {
     top:0px;
 } */
 
-.swiper-page-dec {
+#pop-window .swiper-page-dec {
     /* position: absolute; */
     /* bottom: 10px;
     left: 100px; */
 }
 
-.pop-sub-border-img {
+#pop-window .pop-sub-border-img {
     width: 100%;
     height: 100%;
     background-image: url('/img/shop-img-border.png');
@@ -479,7 +479,7 @@ body {
     object-fit: contain;
 }
 
-.sub-img {
+#pop-window .sub-img {
     width: 420px;
     height: 456px;
     border: 10px solid transparent;
@@ -491,16 +491,16 @@ body {
 
 /* tab-nav switch  */
 
-.tab-switch {
+#pop-window .tab-switch {
     display: none;
 }
 
-.tab-nav {
+#pop-window .tab-nav {
     width: 84%;
     margin: auto;
 }
 
-.tab-switch:checked+.tab-label {
+#pop-window .tab-switch:checked+.tab-label {
     background: #222222;
     color: #ffe282;
     border-bottom: 0;
@@ -510,14 +510,14 @@ body {
     top: -0.0625rem;
 }
 
-.tab-switch:checked+label+.tab-content {
+#pop-window .tab-switch:checked+label+.tab-content {
     z-index: 2;
     opacity: 1;
     border-color: #dee2e6 #dee2e6 #f8fafc;
     transition: all 0.35s;
 }
 
-.tab-label {
+#pop-window .tab-label {
     position: relative;
     /* display: block; */
     line-height: 2.75em;
@@ -531,12 +531,12 @@ body {
     transition: all 0.25s;
 }
 
-.tab-label:hover {
+#pop-window .tab-label:hover {
     top: -0.25rem;
     transition: top 0.25s;
 }
 
-.tab-content {
+#pop-window .tab-content {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -547,7 +547,7 @@ body {
     /* border-top: 2px solid #ffffff; */
 }
 
-.tab-content::after {
+#pop-window .tab-content::after {
     content: '';
     width: 100%;
     height: 2px;
@@ -556,7 +556,7 @@ body {
     top: -3px;
 }
 
-.tab-content>div {
+#pop-window .tab-content>div {
     display: none;
     background: #222222;
     color: #ffffff;
@@ -572,7 +572,7 @@ body {
 
 
 
-.tab-switch:checked+.tab-label {
+#pop-window .tab-switch:checked+.tab-label {
     background: #222222;
     color: #ffe282;
     border-bottom: 0;
@@ -585,7 +585,7 @@ body {
     top: -0.0625rem;
 }
 
-.tab-switch+.tab-label {
+#pop-window .tab-switch+.tab-label {
     border-bottom: 0;
     padding: 8px 16px;
     z-index: 1;
@@ -604,65 +604,65 @@ a {
     text-decoration: none;
 }
 
-.bottom-pop-window-swiper {
+#pop-window .bottom-pop-window-swiper {
     position: relative;
     width: 84%;
     margin: 0 auto;
 }
 
-.recommend-title {
+#pop-window .recommend-title {
     width: 100%;
     font-size: 18px;
     margin-bottom: 18px;
     color: #ffffff;
 }
 
-.recommend-line {
+#pop-window .recommend-line {
     width: 100%;
     border-top: 2px solid #ffffff;
     margin-bottom: 32px;
 }
 
-.swiper-button-product .swiper-button-next {
+#pop-window .swiper-button-product .swiper-button-next {
     position: absolute;
     right: -30px;
 }
 
-.swiper-button-product {
+#pop-window .swiper-button-product {
     position: relative;
     bottom: 340px;
 }
 
-.swiper-button-product .swiper-button-prev {
+#pop-window .swiper-button-product .swiper-button-prev {
     position: absolute;
     left: -35px;
 }
 
 
-.card-container {
+#pop-window .card-container {
     max-width: 1140px;
     width: 65%;
     margin: auto;
 }
 
 @media screen and (min-width:900px) {
-    .card-container {
+    #pop-window .card-container {
         width: 80%;
     }
 }
 
 @media screen and (min-width:1400px) {
-    .card-container {
+    #pop-window .card-container {
         width: 100%;
     }
 }
 
-.swiper-pop-bottom {
+#pop-window .swiper-pop-bottom {
     width: 100%;
     margin: 20px auto;
 }
 
-.swiper-pop-bottom-slide {
+#pop-window .swiper-pop-bottom-slide {
     text-align: center;
     font-size: 18px;
     /* margin: 0px 0px 12px; */
@@ -671,7 +671,7 @@ a {
     background: unset;
 }
 
-.img-box-border-img {
+#pop-window .img-box-border-img {
     width: 293px;
     height: 318px;
     background-image: url('/img/shop-img-border.png');
@@ -681,7 +681,7 @@ a {
     top: 10px;
 }
 
-.product-img {
+#pop-window .product-img {
     width: 276px;
     height: 301px;
     position: absolute;
@@ -689,7 +689,7 @@ a {
     top: 10px;
 }
 
-.ask-icon {
+#pop-window .ask-icon {
     position: absolute;
     width: 50px;
     height: 50px;
@@ -697,7 +697,7 @@ a {
     top: 10px;
 }
 
-.ask-icon-hover {
+#pop-window .ask-icon-hover {
     position: absolute;
     width: 50px;
     height: 50px;
@@ -705,7 +705,7 @@ a {
     top: 0px;
 }
 
-.direction-body {
+#pop-window .direction-body {
     width: 293px;
     height: auto;
     margin-bottom: 50px;
@@ -714,66 +714,66 @@ a {
 
 @media (max-width:1400px) {
 
-    .direction-body {
+    #pop-window .direction-body {
         margin: auto;
     }
 }
 
 @media (max-width:540px) {
 
-    .img-w-h-border-img {
+    #pop-window .img-w-h-border-img {
         width: 100%;
 
     }
 
-    .direction-body {
+    #pop-window .direction-body {
         width: 100%;
     }
 
-    .product-img-hover {
+    #pop-window .product-img-hover {
         width: calc(100% - 20px);
     }
 
-    .product-img {
+    #pop-window .product-img {
         width: calc(100% - 20px);
     }
 }
 
-.commodity-title {
+#pop-window .commodity-title {
     height: 32px;
     font-size: 20px;
     margin-bottom: 15px;
 }
 
-.commodity-title-english {
+#pop-window .commodity-title-english {
     height: 42px;
     font-size: 14px;
     margin-bottom: 20px;
 }
 
-.commodity-sort {
+#pop-window .commodity-sort {
     height: 32px;
     font-size: 20px;
 }
 
-.commodity-title,
-.commodity-title-english,
-.commodity-sort {
+#pop-window .commodity-title,
+#pop-window .commodity-title-english,
+#pop-window .commodity-sort {
     display: flex;
 }
 
 
-.swiper-button-next:after,
-.swiper-button-prev:after {
+#pop-window .swiper-button-next:after,
+#pop-window .swiper-button-prev:after {
     display: none;
 }
 
-.next-prev-img {
+#pop-window .next-prev-img {
     width: 22px;
     height: 37px;
 }
 
-.product-img-hover {
+#pop-window .product-img-hover {
     position: absolute;
     width: 276px;
     height: 301px;
@@ -786,12 +786,12 @@ a {
     transition: 1s;
 }
 
-.img-box-border-img:hover .product-img-hover {
+#pop-window .img-box-border-img:hover .product-img-hover {
     opacity: 0.8;
 
 }
 
-.commodity-more-button.btn {
+#pop-window .commodity-more-button.btn {
     width: 98px;
     height: 34px;
     display: flex;
@@ -810,16 +810,16 @@ a {
 
 @media (max-width:1100px) {
 
-    .product-information-content {
+    #pop-window .product-information-content {
         flex-direction: column;
         flex-wrap: wrap;
     }
 
-    .product-information-swiper {
+    #pop-window .product-information-swiper {
         width: 100%;
     }
 
-    .product-information-text {
+    #pop-window .product-information-text {
         width: 100%;
         height: 600px;
         display: flex;
@@ -828,7 +828,7 @@ a {
         margin: 0 auto 65px;
     }
 
-    .container {
+    #pop-window .container {
         display: flex;
         flex-direction: column;
     }
