--- a/css/common-question.css
+++ b/css/common-question.css
@@ -1,100 +1,117 @@
-@keyframes open {
-  from {
-    height: 0;
-  }
-
-  to {
-    height: auto;
-  }
-}
-
-@keyframes close {
-  from {
-    height: auto;
-  }
-
-  to {
-    height: 0;
-  }
-}
-
-h3 {
-  font-size: 14pt;
-}
-
-.question-area {
+#common-question .background {
   width: 100%;
+  background-color: #0C1219;
+}
+
+#common-question .container {
+  max-width: 986px;
+  margin: auto;
+  margin-top: 78px;
+  margin-bottom: 71px;
+  padding: 0px 20px;
+  position: relative;
   background-color: lightpink;
 }
 
-.click-area {
-  width: 90%;
-  margin: auto;
-  background-color: lightblue;
-  display: block;
+/* #common-question img{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: -9%;
+  left: calc(50% - calc(429px / 2));
+} */
+
+#common-question .text-fqa {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 23px;
+  font-weight: bold;
 }
 
-.top-area {
-  width: 90%;
-  margin: auto;
-  background-color: lightslategray;
+#common-question .inside-container {
   display: flex;
+  justify-content: center;
+}
+
+#common-question .left-container,
+#common-question .right-container {
+  width: calc(calc(100% / 2) - 17px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#common-question .qa-area{
+  margin: 7px 8px 9px 9px;
+  border: 1px solid #f4dd97;
+  width: calc(100% - 17px);
+  padding: 38px 19px 37px 19px;
+  cursor: pointer;
+}
+
+#common-question .question-area {
+  width: 100%;
+}
+
+#common-question .top-area{
   position: relative;
 }
 
-.border-test {
-  border: 10px green solid;
+#common-question .mark::before {
+  transition: 0.5s;
+  content: '';
+  width: 21px;
+  background-color: #f4dd97;
+  display: block;
+  height: 3.5px;
+  position: absolute;
+  top: calc(50% - 1.5px);
+  left: 10px;
 }
 
-.down-area {
+#common-question .mark::after {
+  transition: 0.5s;
+  content: '';
+  width: 21px;
+  background-color: #f4dd97;
+  display: block;
+  height: 3.5px;
+  transform: rotate(90deg);
+  position: absolute;
+  top: calc(50% - 1.5px);
+  left: 10px;
+}
+
+#common-question #qa1:checked + .qa-area .top-area .mark::before {
+  transform: rotate(-180deg);
+}
+
+#common-question #qa1:checked + .qa-area .top-area .mark::after {
+  transform: rotate(180deg);
+}
+
+#common-question .inside-container h3{
+  font-size: 14pt;
+  margin:0 0 0 50px;
+}
+
+#common-question .inside-container .down-area{
+  margin: 0 0 0 0;
+  display: none;
+}
+
+#common-question #qa1:checked + .qa-area .down-area {
+  display: block;
+}
+
+#common-question .inside-container .down-area::before{
+  content: "";
+  height: 1px;
+  top: -10px;
+  left: 0%;
+  background: rgb(129, 129, 129);
   width: 100%;
-  border-top: 2px white solid;
-  /* display: none; */
-  height: 0;
-}
-
-#setsume1:checked+.click-area+.down-area {
-  animation: open 0.5s linear;
-  animation-fill-mode: forwards;
-  /* display: block; */
-}
-
-.plus-mark::before {
-  transition: 0.5s;
-  content: '';
-  width: 21px;
-  height: 5px;
-  background-color: #f4dd97;
-  content: '';
   display: block;
-  height: 3.5px;
-  position: absolute;
-  top: calc(50% - 1.5px);
-  left: 10px;
-}
-
-.plus-mark::after {
-  transition: 0.5s;
-  content: '';
-  width: 21px;
-  background-color: #f4dd97;
-  content: '';
-  display: block;
-  height: 3.5px;
-  rotate: 90deg;
-  position: absolute;
-  top: calc(50% - 1.5px);
-  left: 10px;
-}
-
-#setsume1:checked+.click-area>.top-area>.plus-mark::after {
-  rotate: 180deg;
-}
-
-#setsume1:checked+.click-area>.top-area>.plus-mark::before {
-  rotate: -180deg;
-}
-
-.plus-mark+h3 {
-  margin-left: 50px;
+  margin: 10px 0;
 }
