--- a/css/common-question.css
+++ b/css/common-question.css
@@ -38,12 +38,14 @@
 
 #common-question .inside-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
 #common-question .left-container,
 #common-question .right-container {
-  width: 361px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,9 +54,28 @@
 #common-question .qa-area {
   margin: 7px 8px 9px 9px;
   border: 1px solid #f4dd97;
-  width: calc(100% - 17px);
-  padding: 37px 4px 37px 18px;
+  width: 100%;
+  padding: 12px 15px;
   cursor: pointer;
+  font-size: 14px;
+}
+
+@media screen and (min-width:700px) {
+  #common-question .inside-container {
+    flex-direction: row;
+    align-items: unset;
+  }
+
+  #common-question .left-container,
+  #common-question .right-container {
+    width: 361px;
+  }
+
+  #common-question .qa-area {
+    width: calc(100% - 17px);
+    padding: 37px 4px 37px 18px;
+    font-size: 16px;
+  }
 }
 
 @media screen and (min-width:770px) {
@@ -86,7 +107,7 @@
   height: 3.5px;
   position: absolute;
   top: calc(50% - 1.5px);
-  left: 10px;
+  left: 0px;
 }
 
 #common-question .mark::after {
@@ -99,7 +120,7 @@
   transform: rotate(90deg);
   position: absolute;
   top: calc(50% - 1.5px);
-  left: 10px;
+  left: 0px;
 }
 
 #common-question #qa1:checked+.qa-area .top-area .mark::before,
@@ -128,16 +149,10 @@
   transform: rotate(180deg);
 }
 
-#common-question .inside-container h3 {
-  font-size: 14pt;
-  margin: 0 0 0 50px;
-  color: white;
-}
-
 #common-question .title-text {
   font-family: "\5FAE\8EDF\6B63\9ED1\9AD4";
   color: #ffffff;
-  margin: 0 0 0 50px;
+  margin: 0 0 0 40px;
   letter-spacing: 0.1em;
 }
 
